--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,47 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container">
+        <a class="navbar-brand" routerLink="">Cinema App</a>
+
+        <!-- Language Dropdown -->
+        
+
+        <!-- Watchlist Link -->
+        <ul class="navbar-nav ml-auto">
+            <div class="dropdown ml-auto">
+                <button class="btn dropdown-toggle" type="button" id="languageDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    En
+                </button>
+                <div class="dropdown-menu" aria-labelledby="languageDropdown">
+                    <a class="dropdown-item" href="#">En</a>
+                    <a class="dropdown-item" href="#">Fr</a>
+                    <a class="dropdown-item" href="#">Es</a>
+                    <!-- Add more languages as needed -->
+                </div>
+            </div>
+            <li class="nav-item mx-3">
+                <a class="nav-link" routerLink="watch-list"><i class="fa-solid fa-heart fa-xl mx-1"></i>Watchlist</a>
+            </li>
+            <div *ngIf="isLoggedIn; then logged else logOut">
+                <!-- The content below will be displayed if isLoggedIn is true -->
+            </div>
+            
+            <ng-template #logged>
+                <li class="d-flex nav-item">
+                    <img src="../../../assets/profile.jpg" alt="" class="user-profile-img my-1">
+                    <a class="nav-link" href="#">Account</a>
+                    <a class="nav-link underline-bold-link" (click)="logout()" routerLink="/">Logout</a>
+                </li>
+            </ng-template>
+            
+            <ng-template #logOut>
+                <li class="nav-item">
+                    <a class="nav-link underline-bold-link" routerLink="login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link underline-bold-link" routerLink="signup">Signup</a>
+                </li>
+            </ng-template>
+            
+        </ul>
+    </div>
+</nav>
