--- a/src/app/movies/movie-card/movie-card.component.html
+++ b/src/app/movies/movie-card/movie-card.component.html
@@ -1,1 +1,9 @@
-<p>movie-card works!</p>
+<div class="card" (click)="openDetailes(movie.id)">
+    <h5 class="card-title">{{movie.title}}</h5>
+    <div class="box-img">
+        <img [src]="'https://image.tmdb.org/t/p/original/' + movie.poster_path">
+    </div>
+    <p class="card-text">Rating: {{movie.vote_average}}</p>
+    <p class="card-text">Release Date: {{movie.release_date | date}} September 30, 2023</p>
+    <button class="btn watchlist-button">&#x2665;</button>
+</div>
