--- a/src/app/movies/movies-list/movies-list.component.html
+++ b/src/app/movies/movies-list/movies-list.component.html
@@ -1,1 +1,8 @@
 <p>movies-list works!</p>
+<div class="container mt-5">
+    <div class="row">
+        <div class=" movies  col-lg-3" *ngFor="let movieDataformList of listMovies">
+          <app-movie-card [movie]="movieDataformList"></app-movie-card>
+        </div> 
+    </div>
+</div>
