--- a/src/app/movies/movies-list/movies-list.component.html
+++ b/src/app/movies/movies-list/movies-list.component.html
@@ -1,8 +1,9 @@
-<p>movies-list works!</p>
+<app-search></app-search>
 <div class="container mt-5">
     <div class="row">
         <div class=" movies  col-lg-3" *ngFor="let movieDataformList of listMovies">
-          <app-movie-card [movie]="movieDataformList"></app-movie-card>
+          <app-movie-card [movie]="movieDataformList"     (dataEvent)="receiveData($event)">
+            ></app-movie-card>
         </div> 
     </div>
 </div>
