first commit on search-service, not working yet

--- a/src/app/movies/search/search.component.html
+++ b/src/app/movies/search/search.component.html
@@ -4,7 +4,7 @@
         <p>Millions of movies</p>
         <div class="input-group mb-3">
             <input [(ngModel)]="movieName" type="text" class="form-control" placeholder="Search for movies" aria-label="Search for movies" aria-describedby="basic-addon2">
-            <div class="input-group-append mx-2">
+            <div class="input-group-append mx-2"><span></span>
                 <button class="btn btn-primary" type="button" (click)="emitData()">Search</button>
             </div>
         </div>
