--- a/src/app/movies/movies-list/movies-list.component.html
+++ b/src/app/movies/movies-list/movies-list.component.html
@@ -1,9 +1,18 @@
 <app-search></app-search>
 <div class="container mt-5">
-    <div class="row">
-        <div class=" movies  col-lg-3" *ngFor="let movieDataformList of listMovies">
-          <app-movie-card [movie]="movieDataformList"     (dataEvent)="receiveData($event)">
-            ></app-movie-card>
-        </div> 
-    </div>
+  <div class="row">
+    <ng-container *ngIf="myresult && myresult.length > 0; else showAllMovies">
+      <!-- Display search results -->
+      <div class="movies col-lg-3" *ngFor="let movieDataformList of myresult">
+        <app-movie-card [movie]="movieDataformList"></app-movie-card>
+      </div>
+    </ng-container>
+
+    <ng-template #showAllMovies>
+      <!-- Display all movies when there are no search results -->
+      <div class="movies col-lg-3" *ngFor="let movieDataformList of listMovies">
+        <app-movie-card [movie]="movieDataformList"></app-movie-card>
+      </div>
+    </ng-template>
+  </div>
 </div>
