--- a/src/app/movies/search/search.component.html
+++ b/src/app/movies/search/search.component.html
@@ -4,10 +4,10 @@
         <p>Millions of movies</p>
         <div class="input-group mb-3">
             <input [(ngModel)]="movieName" type="text" class="form-control" placeholder="Search for movies" aria-label="Search for movies" aria-describedby="basic-addon2">
-            <div class="input-group-append mx-2"><span></span>
+            <div class="input-group-append mx-2" *ngIf="movieName">
                 <button class="btn btn-primary" type="button" (click)="sendResultToService(movieName)">Search</button>
             </div>
-            <div class="input-group-append mx-2" *ngIf="searchFlag"><span></span>
+            <div class="input-group-append mx-2" *ngIf="searchFlag">
                 <button class="btn btn-secondary" type="button" (click)="reset()">Reset</button>
             </div>
         </div>
