--- a/src/app/movies/movies-list/movies-list.component.html
+++ b/src/app/movies/movies-list/movies-list.component.html
@@ -1,12 +1,21 @@
 <app-search></app-search>
 <div class="container mt-5">
   <div class="row">
-    <ng-container *ngIf="myresult && myresult.length > 0; else showAllMovies">
+    <ng-container *ngIf="myresult && myresult.length > 0; else showNoResults">
       <!-- Display search results -->
       <div class="movies col-lg-3" *ngFor="let movieDataformList of myresult">
-        <app-movie-card [movie]="movieDataformList" ></app-movie-card>
+        <app-movie-card [movie]="movieDataformList"></app-movie-card>
       </div>
     </ng-container>
+
+    <ng-template #showNoResults>
+      <ng-container *ngIf="myresult && myresult.length === 0; else showAllMovies">
+        <!-- Display 'No results' message when there are no search results -->
+        <div class="no-results-message">
+          No results found.
+        </div>
+      </ng-container>
+    </ng-template>
 
     <ng-template #showAllMovies>
       <!-- Display all movies when there are no search results -->
