update wishlist service: - Added functionality to add a movie to the wishlist. - Implemented a counter for movies in the wishlist. - Removed the colored heart button for adding movies to the wishlist. - Set the heart icon color to gray. - Displayed movies in the wishlist component. - Displayed the length of movies in the header. - Added a handle function to add a movie to the wishlist on the movie details page.

--- a/src/app/movies/movie-card/movie-card.component.html
+++ b/src/app/movies/movie-card/movie-card.component.html
@@ -5,5 +5,5 @@
     </div>
     <p class="card-text">Rating: {{movie.vote_average}}</p>
     <p class="card-text">Release Date: {{movie.release_date | date}} September 30, 2023</p>
-    <button class="btn watchlist-button">&#x2665;</button>
+    <button class="btn watchlist-button" (click)="handleAddMovieToWishList(movie)"><i class="fa fa-heart"></i></button>
 </div>
