fixed: when going back from details page to home page, it will now show all movies, and not the last results

--- a/src/app/movies/movie-details/movie-details.component.html
+++ b/src/app/movies/movie-details/movie-details.component.html
@@ -7,7 +7,7 @@
 
         <!-- Right Section: Movie Details -->
         <div class="col-md-8">
-            <h1>Movie Title</h1>
+            <h1>{{movieAllDetailes.title}}</h1>
             <p><strong>Release Date:</strong> {{movieAllDetailes.release_date | date}}</p>
 
             <p><div class="ratings">
