fix(card-movies): Remove all legacy card styles and add functionality to add to wishlist. feat(search): Implement search service and merge pagination and search components. fix(card-movie): Reposition clicked functionality for [image + title]. remove(card-movie): Remove navigation route to wishlist. fix(movie-details): Add a wrapper to structure HTML. update(movie-details): Remove navigation route to wishlist.

--- a/src/app/movies/movie-card/movie-card.component.html
+++ b/src/app/movies/movie-card/movie-card.component.html
@@ -1,13 +1,12 @@
-<div class="card" (click)="openDetailes(movie.id)">
-    <h5 class="card-title">{{movie.title}}</h5>
-    <div class="box-img">
-        <img [src]="'https://image.tmdb.org/t/p/original/' + movie.poster_path">
+<div class="card" >
+    <div (click)="openDetailes(movie.id)" style="cursor: pointer;">
+        <h5 class="card-title">{{movie.title}}</h5>
+        <div class="box-img">
+            <img [src]="'https://image.tmdb.org/t/p/original/' + movie.poster_path">
+        </div>
     </div>
     <p class="card-text">Rating: {{movie.vote_average}}</p>
     <p class="card-text">Release Date: {{movie.release_date | date}} September 30, 2023</p>
-<<<<<<< HEAD
-    <button class="btn watchlist-button">&#x2665;</button>
-=======
+
     <button class="btn watchlist-button" (click)="handleAddMovieToWishList(movie)"><i class="fa fa-heart"></i></button>
->>>>>>> 0d7918b71be96c3e507d88e781d9f41aebfa2bb4
 </div>
