--- a/src/app/movies/search/search.component.html
+++ b/src/app/movies/search/search.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mt-5 wrapper">
     <div class="custom-section">
         <h2 class="mb-3">Welcome to our movies app</h2>
         <p>Millions of movies</p>
