--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,6 +1,13 @@
 .navbar {
     background-color: yellow;
     border-radius: 0; /* Sharp edges */
+    position: fixed;
+    top:0;
+    left:0;
+    width:100%;
+    margin-bottom: 10px;
+    z-index: 99;
+
 }
 
 
