--- a/src/app/watch-list/wish-list/wish-list.component.html
+++ b/src/app/watch-list/wish-list/wish-list.component.html
@@ -1,5 +1,4 @@
-<p>wish-list works!</p>
-<section class="wish-list-section">
+<section class="wish-list-section wrapper">
    <div class="container">
       <div class="row">
         <div class="col-lg-6" *ngFor="let movie of moviesListContainer">
