Create component carousel. Install Owl Carousel: npm i ngx-owl-carousel-o. Added initial styles to angular.json.
Update(movies service): Added a new function to get favorite movies to display on the homepage carousel.

Update(movie details): Added carousel component in the footer page to display recommended movies.

--- a/src/app/movies/movie-details/movie-details.component.html
+++ b/src/app/movies/movie-details/movie-details.component.html
@@ -83,7 +83,7 @@
       <h2>Recommendations</h2>
       <div class="recommendations-movies">
         <div class="row">
-          <div
+          <!-- <div
             class="col-lg-4"
             *ngFor="
               let movieRecommanded of moviesRecommendation;
@@ -95,6 +95,10 @@
               *ngIf="index < 6"
             ></app-movie-card>
           </div>
+         -->
+         <div class="box-carousel">
+          <app-carousel [moviesList]="moviesRecommendation"></app-carousel>
+         </div>
         </div>
       </div>
     </div>
