--- a/src/app/movies/movie-details/movie-details.component.css
+++ b/src/app/movies/movie-details/movie-details.component.css
@@ -1,6 +1,6 @@
 .movie-poster {
   max-width: 100%;
-  height: 400px;
+  /* height: 400px; */
   border-radius: 10px;
   box-shadow: 3px 3px 10px #efefef, -2px -2px 10px #efefef;
 }
