refactor(watch-list): Added handling for empty cart cases and implemented navigation to the home page. Also, updated the styling for the empty cart.

--- a/src/app/watch-list/wish-list/wish-list.component.css
+++ b/src/app/watch-list/wish-list/wish-list.component.css
@@ -1,4 +1,13 @@
 .wrapper {
-    padding-top: 25px !important;
-  }
-  
+  padding-top: 25px !important;
+}
+
+.wrapper-empty-cart{
+  margin:20px auto;
+  height:300px;
+}
+
+.wrapper-empty-cart img{
+  width: 100%;
+  height: 350px;
+}
