--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,31 @@
-<p>login works!</p>
+<div class="container">
+    <h2>Login</h2>
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" class="form-control" id="email" formControlName="email">
+        <div *ngIf="loginForm.controls['email'].invalid && loginForm.controls['email'].touched" class="error-message">
+          <div *ngIf="loginForm.controls['email'].hasError('required')">Email is required.</div>
+          <div *ngIf="loginForm.controls['email'].hasError('email')">Invalid email format.</div>
+        </div>
+      </div>
+  
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" formControlName="password">
+        <div *ngIf="loginForm.controls['password'].invalid && loginForm.controls['password'].touched" class="error-message">
+          <div *ngIf="loginForm.controls['password'].hasError('required')">Password is required.</div>
+        </div>
+      </div>
+  
+      <button type="submit" class="btn btn-primary">Login</button>
+    </form>
+    <div *ngIf="successMessage==='success'" class="success-card">Logged in successfully.</div>
+
+    <div *ngIf="successMessage==='user incorrect'" class="error-card">
+      Invalid credentials <a routerLink="/signup">Sign up instead?</a>
+    </div>
+
+
+  </div>
+  
