feat: Create pipe for movie-details to show movie duration in hours and minutes
fix: Fix pagination buttons; add functions to the first three buttons

fix: Disable next button when on the 500's page

feat: Add query param to the URL with page number

style: Fix watch-list page style when empty

--- a/src/app/movies/movie-details/movie-details.component.html
+++ b/src/app/movies/movie-details/movie-details.component.html
@@ -51,7 +51,7 @@
           >website Link <i class="fa fa-link"></i
         ></a>
       </div>
-      <p><strong>Duration:</strong> {{ movieAllDetailes.runtime }}</p>
+      <p><strong>Duration:</strong> {{ movieAllDetailes.runtime | duration }}</p>
       <p>
         <strong>Language:</strong>
         <span
