--- a/src/app/movies/movies-list/movies-list.component.css
+++ b/src/app/movies/movies-list/movies-list.component.css
@@ -16,3 +16,16 @@
 .stop-find{
   cursor:not-allowed;
 }
+
+/* Add modern and good-looking styles to the "No results found" message */
+.no-results-message {
+  background-color: rgb(230, 230, 116); /* Yellow background color */
+  padding: 10px; /* Padding for spacing */
+  text-align: center; /* Center the text */
+  border-radius: 5px; /* Rounded corners */
+  font-size: 18px; /* Font size */
+  font-weight: bold; /* Bold text */
+  color: #333; /* Text color */
+  margin-bottom: 10px; /* Margin to separate from other elements */
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
+}
