feat(wish-list): add notification whene added movie at to cart - added notification at this parts [movie-card , movie-details , wish-list ,movie-list] whene added or removed movie form wishlist

--- a/src/app/movies/movie-card/movie-card.component.html
+++ b/src/app/movies/movie-card/movie-card.component.html
@@ -1,3 +1,9 @@
+<div class="notify add" *ngIf="addedMovie;"> the movie Added To WishList</div>
+<div class="notify remove" *ngIf="removeMovie;"> the movie Removed To WishList</div>
+
+
+
+
 <div class=" card-movie">
     
     <div (click)="openDetailes(movie.id)" style="cursor: pointer;">
