--- a/src/app/movies/movie-details/movie-details.component.html
+++ b/src/app/movies/movie-details/movie-details.component.html
@@ -1,3 +1,8 @@
+
+<div class="notify add" *ngIf="addedMovie;"> the movie Added To WishList</div>
+<div class="notify remove" *ngIf="removeMovie;"> the movie Removed To WishList</div>
+
+
 <div class="container mt-5 wrapper">
   <div class="row">
     <!-- Left Section: Movie Poster -->
