--- a/src/app/movies/movie-card/movie-card.component.css
+++ b/src/app/movies/movie-card/movie-card.component.css
@@ -70,3 +70,28 @@
 .box-img img{
     width:100%;
 }
+
+
+
+.notify{
+    width: 300px;
+    height: 50px;
+    border: 1px solid #F2F6FA;
+    border-radius: 5px;
+    position: fixed;
+    top: 100px;
+    left: 35%;
+    z-index: 999999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+  }
+  .add{
+    color: black;
+    background-color: white
+  }
+  .remove{
+    color: white;
+    background-color: red;
+  }
