--- a/src/app/movies/movie-details/movie-details.component.css
+++ b/src/app/movies/movie-details/movie-details.component.css
@@ -24,3 +24,26 @@
 .wrapper {
   padding-top: 25px !important;
 }
+
+
+.notify{
+  width: 300px;
+  height: 50px;
+  border: 1px solid #F2F6FA;
+  border-radius: 5px;
+  position: fixed;
+  top: 100px;
+  left: 35%;
+  z-index: 999999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.add{
+  color: black;
+  background-color: white
+}
+.remove{
+  color: white;
+  background-color: red;
+}
