--- a/src/app/watch-list/wish-list/wish-list.component.html
+++ b/src/app/watch-list/wish-list/wish-list.component.html
@@ -1,8 +1,14 @@
+
+<div class="notify remove" *ngIf="removeMovie;"> the movie Removed To WishList</div>
+
+
+
+
 <section class="wish-list-section wrapper">
    <div class="container">
       <div class="row">
         <div class="wrapper-content-cart" *ngIf="moviesListContainer.length > 0; else EmptyList">
-          <div   class="col-lg-6" *ngFor="let movie of moviesListContainer"  >
+          <div   class="col-lg-6 m-auto" *ngFor="let movie of moviesListContainer"  >
         
             <div class="card mb-3" style="max-width: 540px;">
               <div class="row g-0">
