--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -21,3 +21,10 @@
     text-decoration: underline;
     font-weight: bold;
 }
+
+.icone-wishlist{
+    padding:1px 7px;
+    border-radius: 50%;
+    background-color: #333;
+    color:white
+}
